// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> checkbox renders correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bgqQcB eaLTmF sc-ewnqHT YigsM"
    data-checked="false"
    data-indeterminate="false"
    data-testid="checkbox"
    name="test"
  />
</DocumentFragment>
`;

exports[`<Input /> email renders correctly 1`] = `
<DocumentFragment>
  <input
    class="sc-dicizt gwqqWq"
    cursor="pointer"
    name="test"
    placeholder="Placeholder"
    type="email"
    value=""
    width="100%"
  />
</DocumentFragment>
`;

exports[`<Input /> renders correctly 1`] = `
<DocumentFragment>
  <input
    class="sc-dicizt gwqqWq"
    cursor="pointer"
    name="test"
    placeholder="Placeholder"
    value=""
    width="100%"
  />
</DocumentFragment>
`;

exports[`<Input /> renders correctly 2`] = `
<DocumentFragment>
  <input
    class="sc-dicizt gwqqWq"
    cursor="pointer"
    name="test"
    placeholder="Placeholder"
    type="password"
    value=""
    width="100%"
  />
</DocumentFragment>
`;

exports[`<Input /> textarea renders correctly 1`] = `
<DocumentFragment>
  <textarea
    class="sc-iVCKna irHDhM"
    cursor="pointer"
    name="test"
    placeholder="Placeholder"
    width="100%"
  />
</DocumentFragment>
`;
